Fix dark mode and add works cited

--- a/site/src/scss/_partials/jumbo.scss
+++ b/site/src/scss/_partials/jumbo.scss
@@ -1,12 +1,15 @@
 .l-jumbo {
-  padding: 4rem 0;
+  padding: 4rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  background-image: url("/bryan-goff-RF4p4rTM-2s-unsplash.jpg");
 }
 
 .l-jumbo > * + * {
   margin-top: 1rem;
   max-width: 50ch;
+  color: white;
+  background: transparent;
 }
