--- a/site/src/scss/_partials/post-tags.scss
+++ b/site/src/scss/_partials/post-tags.scss
@@ -14,6 +14,7 @@
   display: inline-block;
   padding: 5px 10px;
   font-size: 0.8em;
+  color: black;
   background: $COLOR_LIGHTER;
   border: solid 1px $COLOR_LIGHT;
   text-decoration: none;
